[gd_scene load_steps=14 format=2]

[ext_resource path="res://Limpiar/Limpiar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/bird-02.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/bird-02-pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scripts/SwipeObject.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/SwipeBird.gd" type="Script" id=5]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=6]
[ext_resource path="res://addons/swipe-detector/icon.png" type="Texture" id=7]
[ext_resource path="res://CustomResources/DynamicFonts/FiraCode-Medium.tres" type="DynamicFont" id=8]
[ext_resource path="res://Limpiar/MusicManager.gd" type="Script" id=9]
[ext_resource path="res://Limpiar/Metronome.gd" type="Script" id=10]
[ext_resource path="res://Audio/MusicRefLoop_CleaningStage_110BPM.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 300 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 8 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Limpiar" type="Node2D"]
script = ExtResource( 1 )

[node name="GoOut" type="Tween" parent="."]

[node name="CleanCheck" type="Timer" parent="."]

[node name="ResetCountdown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SwipeObject" type="TouchScreenButton" parent="."]
modulate = Color( 0.407843, 0.878431, 0.141176, 1 )
position = Vector2( 156.408, 111.842 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
passby_press = true
script = ExtResource( 4 )

[node name="SwipeBird" type="TouchScreenButton" parent="."]
modulate = Color( 0.870588, 0.278431, 0.278431, 1 )
position = Vector2( 710.056, 433.778 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
passby_press = true
script = ExtResource( 5 )

[node name="SwipeDetector" type="Node" parent="SwipeBird"]
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 7 )
}
directions_mode = "Four Directions"

[node name="Debug" type="Control" parent="."]
editor/display_folded = true
margin_right = 1280.0
margin_bottom = 800.0

[node name="CleanTime" type="Label" parent="Debug"]
anchor_right = 1.0
margin_bottom = 14.0
theme = SubResource( 2 )
text = "placeholder"
align = 1
valign = 1

[node name="MusicManager" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Metronome" type="Node" parent="MusicManager"]
script = ExtResource( 10 )
bpm = 110.0

[node name="Display" type="Label" parent="MusicManager/Metronome"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Timer" type="Timer" parent="MusicManager/Metronome"]
wait_time = 0.5

[node name="Mx" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource( 11 )

[connection signal="timeout" from="CleanCheck" to="." method="_on_CleanCheck_timeout"]
[connection signal="timeout" from="ResetCountdown" to="." method="_on_ResetCountdown_timeout"]
[connection signal="pressed" from="SwipeObject" to="SwipeObject" method="_on_touch_pressed"]
[connection signal="released" from="SwipeObject" to="SwipeObject" method="_on_touch_released"]
[connection signal="swipe_ended" from="SwipeBird/SwipeDetector" to="SwipeBird" method="_on_SwipeDetector_swipe_ended"]
[connection signal="swipe_started" from="SwipeBird/SwipeDetector" to="SwipeBird" method="_on_SwipeDetector_swipe_started"]
[connection signal="swiped" from="SwipeBird/SwipeDetector" to="SwipeBird" method="_on_SwipeDetector_swiped"]
[connection signal="timeout" from="MusicManager/Metronome/Timer" to="MusicManager/Metronome" method="_on_Timer_timeout"]
